fix file upload z-index

--- a/frontend/src/styles/common.less
+++ b/frontend/src/styles/common.less
@@ -148,12 +148,12 @@
 
 .file-upload-low {
     position: fixed;
-    z-index: 2000;
+    z-index: 1001;
 }
 
 .file-upload-modal {
     position: fixed;
-    z-index: 3000;
+    z-index: 1000;
 }
 .ivu-form-item-error-tip {
     position: unset;
